--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@500&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 style="font-size: 300px; display: flex; align-content: center; justify-content: center;">I love you babou</h1>
+    <h1 style="font-size: 150px; display: flex; align-content: center; justify-content: center; color:white;">I love you babou</h1>
 
 
     <script src="script.js"></script>
