--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQQPNCFX95"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-JQQPNCFX95');
+    </script>
     <div id="pageConnexion">
         <img src="Assets/fondEcran/connexion/MacOS_Monterey_2021_Purple_Abstract_5K_Background_1366x768.jpg">
         <div id="iconUtilisateur">
